--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <input type="email" id="email"  placeholder="Escribe tu email"><br/>
         <label for="phone">Télefono:</label>
         <input type="text" id="phone"  placeholder="Escribe tu teléfono"><br/>
-        <label for="msg">mensaje:</label>
+        <label for="msg">Mensaje:</label>
         <textarea id="msg"  placeholder="Escribe tu mensaje"></textarea>
-        <input type="button" value="">
+        <input type="button" value="Enviar">
     </form>
 
 </body>
